syntax = "proto3";

package validateToken;

option go_package = "./proto";


service ValidateToken{
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest{
    string token = 1;
}

message ValidateTokenResponse{
    bool valid = 1;
}